--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -645,19 +645,19 @@
         <div class="row">
           <div class="col-md-4">
             <div class="single-blog-card card border-0 shadow-sm">
-              <span class="category position-absolute badge badge-pill badge-primary">Power feature</span>
-              <img src="%PUBLIC_URL%/marketing/screens/new-feature-04.png" class="card-img-top position-relative"
+              <span class="category position-absolute badge badge-pill badge-danger">Security</span>
+              <img src="%PUBLIC_URL%/marketing/screens/new-feature-07.png" class="card-img-top position-relative"
                 alt="blog" />
               <div class="card-body">
                 <div class="post-meta mb-2">
                   <ul class="list-inline meta-list">
-                    <li class="list-inline-item">Oct 11, 2020</li>
+                    <li class="list-inline-item">Dec 1, 2020</li>
                   </ul>
                 </div>
-                <h3 class="h5 card-title"><a href="#">Blurred Posts</a></h3>
+                <h3 class="h5 card-title"><a href="#">Encrypted Data</a></h3>
                 <p class="card-text">
-                  You can now log choose to blur posts before the moderator reveals them. This allows people to
-                  contribute without being influenced by others.
+                  Protect your data: the content of your session can be encrypted and decrypted on the client, 
+                  protecting your data from being read by anyone else including us.
                 </p>
               </div>
             </div>
@@ -665,20 +665,21 @@
           <div class="col-md-4">
             <div class="single-blog-card card border-0 shadow-sm">
               <span class="category position-absolute badge badge-pill badge-info">Customisation</span>
-              <img src="%PUBLIC_URL%/marketing/screens/new-feature-05.png" class="card-img-top position-relative"
+              <img src="%PUBLIC_URL%/marketing/screens/new-feature-08.png" class="card-img-top position-relative"
                 alt="blog" />
               <div class="card-body">
                 <div class="post-meta mb-2">
                   <ul class="list-inline meta-list">
-                    <li class="list-inline-item">Oct 11, 2020</li>
+                    <li class="list-inline-item">Dec 1, 2020</li>
                   </ul>
                 </div>
                 <h3 class="h5 card-title">
-                  <a href="#">Customise at any time</a>
+                  <a href="#">Email / Password Logins</a>
                 </h3>
                 <p class="card-text">
-                  The moderator (the person who created the session) can now edit the session's options (columns, voting options etc.) at any time.
-                  This gives a much greater flexibility to your team!
+                  You can now create an account the good old-fashioned way, using an email and a password.
+                  This is in addition to our existing OAuth authentication mechanisms, and of course, the
+                  anonymous accounts.
                 </p>
               </div>
             </div>
@@ -686,18 +687,19 @@
           <div class="col-md-4">
             <div class="single-blog-card card border-0 shadow-sm">
               <span class="category position-absolute badge badge-pill badge-danger">Security</span>
-              <img src="%PUBLIC_URL%/marketing/screens/new-feature-06.png" style="margin-top: 20px" class="card-img-top" alt="blog" />
+              <img src="%PUBLIC_URL%/marketing/screens/new-feature-09.png" style="margin-top: 20px" class="card-img-top" alt="blog" />
               <div class="card-body">
                 <div class="post-meta mb-2">
                   <ul class="list-inline meta-list">
-                    <li class="list-inline-item">Oct 11, 2020</li>
+                    <li class="list-inline-item">Dec 1, 2020</li>
                   </ul>
                 </div>
                 <h3 class="h5 card-title">
-                  <a href="#">Deleting Retrospectives</a>
+                  <a href="#">Private Sessions</a>
                 </h3>
                 <p class="card-text">
-                  You can now delete retrospectives that you created. You must have a non-anonymous account to do so.
+                  Make your session a private session by preventing any new user from joining.
+                  This adds some privacy and peace of mind to your retrospectives!
                 </p>
               </div>
             </div>
@@ -781,8 +783,7 @@
           <div class="col-lg-3 mb-3 mb-lg-0">
             <div class="footer-nav-wrap text-black">
               <p>
-                This is a free and open-source software. For support, file a GitHub
-                ticket
+                This is a free and open-source software. For support, file a GitHub ticket
                 <a href="https://github.com/antoinejaussoin/retro-board" target="_blank" title="GitHub">here.</a>
               </p>
 
