--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Retrospected - A fun way to retrospect</title>
+  <title>Retrospected - Free Online Retrospectives</title>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
   <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1" media="(device-height: 568px)">
@@ -11,7 +11,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="format-detection" content="telephone=no">
   <meta name="HandheldFriendly" content="true">
-  <meta name="description" content="Real-time Agile Retrospective Board for development teams" />
+  <meta name="description" content="Free Real-time Agile Retrospective Board for engineering teams" />
   <meta http-equiv="cleartype" content="on">
 
   <meta property="og:site_name" content="Retrospected" />
