--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -166,7 +166,7 @@
                 <br />
                 <span>Why not use a whiteboard?</span>
               </h2>
-              <p class="lead">Because it's fun 🎉, but beyond that:</p>
+              <p class="lead">Because it's fun 🎉, but also it's:</p>
             </div>
           </div>
         </div>
@@ -176,7 +176,7 @@
               <div class="circle-icon mb-5">
                 <span class="ti-cloud text-white"></span>
               </div>
-              <h5>It's Online</h5>
+              <h5>Online</h5>
               <p>
                 If you have a distributed team, or people working from home,
                 you must have realised by now that a whiteboard is not ideal.
@@ -188,7 +188,7 @@
               <div class="circle-icon mb-5">
                 <span class="ti-world text-white"></span>
               </div>
-              <h5>It's Green</h5>
+              <h5>Green</h5>
               <p>
                 Think of all the trees you are going to save by <b>not</b>
                 using Post-Its! Or all those whiteboard markers that you don't
@@ -201,7 +201,7 @@
               <div class="circle-icon mb-5">
                 <span class="ti-server text-white"></span>
               </div>
-              <h5>It's Permanent</h5>
+              <h5>Permanent</h5>
               <p>
                 You can go back to your previous retrospectives, any time,
                 anywhere. Try doing that with the whiteboard. Or Post-Its.
@@ -531,7 +531,7 @@
                               <li>20 Users</li>
                               <li>&nbsp;</li>
                           </ul>
-                          <a href="/subscribe" class="btn solid-btn mb-3">Purchase now</a>
+                          <a href="/subscribe" class="btn solid-btn mb-3">Subscribe Now</a>
                       </div>
                   </div>
               </div>
@@ -552,7 +552,7 @@
                               <li>All users from your domain are Pro automatically</li>
                               <li>&nbsp;</li>
                           </ul>
-                          <a href="/subscribe" class="btn outline-btn mb-3">Purchase now</a>
+                          <a href="/subscribe" class="btn outline-btn mb-3">Subscribe Now</a>
                       </div>
                   </div>
               </div>
@@ -606,9 +606,8 @@
               </div>
               <div class="col-md-6">
                   <div class="single-faq">
-                      <h5>Is VAT included in plan prices?</h5>
-                      <p>Distinctively simplify high-quality initiatives for highly efficient applications. Monotonectally
-                          repurpose integrated customer service after magnetic e-services. </p>
+                      <h5>Can I cancel my plan?</h5>
+                      <p>Yes. The subscription can be stopped at any time, and will end at the end of your current billing month.</p>
                   </div>
               </div>
               <div class="col-md-6">
