--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -61,8 +61,10 @@
   <meta name="version" content="%REACT_APP_VERSION%" />
   <meta name="env" content="%NODE_ENV%" />
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700%7COpen+Sans&display=swap"
     rel="stylesheet" class="marketing" />
