Mockup and prices

--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -151,7 +151,7 @@
           </div>
           <div class="col-md-6 col-lg-5">
             <div class="">
-              <img class="img-fluid" src="%PUBLIC_URL%/marketing/screens/mockup-1-02.png" alt="animation image" />
+              <img class="img-fluid" src="%PUBLIC_URL%/marketing/screens/mockup-1-03.png" alt="animation image" />
             </div>
           </div>
         </div>
@@ -522,7 +522,7 @@
                           <img src="%PUBLIC_URL%/marketing/img/pricing-team.svg" alt="pricing img" class="img-fluid">
                       </div>
                       <div class="card-header py-4 border-0 pricing-header">
-                          <div class="h1 text-center mb-0">$<span class="price font-weight-bolder">9.99</span></div>
+                          <div class="h1 text-center mb-0">£<span class="price font-weight-bolder">8.90</span></div>
                           <div class="h4 text-center mb-0"><span class="price-month">/month</span></div>
                       </div>
                       <div class="card-body">
@@ -544,7 +544,7 @@
                         <img src="%PUBLIC_URL%/marketing/img/pricing-unlimited.svg" alt="pricing img" class="img-fluid">
                       </div>
                       <div class="card-header py-4 border-0 pricing-header">
-                          <div class="h1 text-center mb-0">$<span class="price font-weight-bolder">49.99</span></div>
+                          <div class="h1 text-center mb-0">£<span class="price font-weight-bolder">39.90</span></div>
                           <div class="h4 text-center mb-0"><span class="price-month">/month</span></div>
                       </div>
                       <div class="card-body">
