Temporarily remove companies

--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -708,7 +708,7 @@
         </div>
       </div>
     </section>
-
+<!-- 
     <section class="client-section gray-light-bg ptb-100">
       <div class="container">
         <div class="row justify-content-center">
@@ -769,7 +769,7 @@
         </div>
       </div>
     </section>
-  </div>
+  </div> -->
 
   <div class="shape-img subscribe-wrap marketing-content">
     <img src="%PUBLIC_URL%/marketing/img/footer-top-shape.png" alt="footer shape" class="img-fluid" />
