--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -151,7 +151,7 @@
           </div>
           <div class="col-md-6 col-lg-5">
             <div class="">
-              <img class="img-fluid" src="%PUBLIC_URL%/marketing/screens/mockup-1-03.png" alt="animation image" />
+              <img class="img-fluid" src="%PUBLIC_URL%/marketing/screens/mockup-1-03.jpeg" alt="animation image" />
             </div>
           </div>
         </div>
@@ -270,7 +270,7 @@
           </div>
           <div class="col-md-5">
             <div class="about-content-right">
-              <img src="%PUBLIC_URL%/marketing/screens/mockup-2-02.png" alt="about us" class="img-fluid" />
+              <img src="%PUBLIC_URL%/marketing/screens/mockup-2-02.jpeg" alt="about us" class="img-fluid" />
             </div>
           </div>
         </div>
@@ -282,7 +282,7 @@
         <div class="row align-items-center justify-content-between">
           <div class="col-md-4">
             <div class="download-img">
-              <img src="%PUBLIC_URL%/marketing/screens/screen-3-01.png" alt="download" class="img-fluid" />
+              <img src="%PUBLIC_URL%/marketing/screens/screen-3-01.jpeg" alt="download" class="img-fluid" />
             </div>
           </div>
           <div class="col-md-7">
