--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -151,7 +151,7 @@
           </div>
           <div class="col-md-6 col-lg-5">
             <div class="">
-              <img class="img-fluid" src="%PUBLIC_URL%/marketing/screens/mockup-1-03.jpeg" alt="animation image" />
+              <img class="img-fluid" src="%PUBLIC_URL%/marketing/screens/mockup-1-03.webp" alt="animation image" />
             </div>
           </div>
         </div>
@@ -270,7 +270,7 @@
           </div>
           <div class="col-md-5">
             <div class="about-content-right">
-              <img src="%PUBLIC_URL%/marketing/screens/mockup-2-02.jpeg" alt="about us" class="img-fluid" />
+              <img src="%PUBLIC_URL%/marketing/screens/mockup-2-02.webp" alt="about us" class="img-fluid" />
             </div>
           </div>
         </div>
