Convert everything to webp

--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -227,7 +227,7 @@
               <div class="single-feature mb-4">
                 <div class="icon-box-wrap d-flex align-items-center mb-2">
                   <div class="mr-3 icon-box">
-                    <img src="%PUBLIC_URL%/marketing/screens/browsers.png" alt="icon image" class="img-fluid" />
+                    <img src="%PUBLIC_URL%/marketing/screens/browsers.webp" alt="icon image" class="img-fluid" />
                   </div>
                   <p class="mb-0">Compatible with all modern browsers.</p>
                 </div>
@@ -235,7 +235,7 @@
               <div class="single-feature mb-4">
                 <div class="icon-box-wrap mb-2">
                   <div class="mr-3 icon-box">
-                    <img src="%PUBLIC_URL%/marketing/screens/ie-logo.png" alt="icon image" class="img-fluid" />
+                    <img src="%PUBLIC_URL%/marketing/screens/ie-logo.webp" alt="icon image" class="img-fluid" />
                   </div>
                   <p class="mb-0">
                     No, Internet Explorer 6 is not a modern browser.
@@ -246,7 +246,7 @@
               <div class="single-feature mb-4">
                 <div class="icon-box-wrap mb-2">
                   <div class="mr-3 icon-box">
-                    <img src="%PUBLIC_URL%/marketing/screens/ipad.png" alt="icon image" class="img-fluid" />
+                    <img src="%PUBLIC_URL%/marketing/screens/ipad.webp" alt="icon image" class="img-fluid" />
                   </div>
                   <p class="mb-0">
                     Entirely responsive, you can participate vith your iPhone
@@ -258,7 +258,7 @@
               <div class="single-feature mb-4">
                 <div class="icon-box-wrap mb-2">
                   <div class="mr-3 icon-box">
-                    <img src="%PUBLIC_URL%/marketing/screens/rocket.png" alt="icon image" class="img-fluid" />
+                    <img src="%PUBLIC_URL%/marketing/screens/rocket.webp" alt="icon image" class="img-fluid" />
                   </div>
                   <p class="mb-0">
                     The app feels native, because you deserve it.
@@ -282,7 +282,7 @@
         <div class="row align-items-center justify-content-between">
           <div class="col-md-4">
             <div class="download-img">
-              <img src="%PUBLIC_URL%/marketing/screens/screen-3-01.jpeg" alt="download" class="img-fluid" />
+              <img src="%PUBLIC_URL%/marketing/screens/screen-3-01.webp" alt="download" class="img-fluid" />
             </div>
           </div>
           <div class="col-md-7">
@@ -647,7 +647,7 @@
           <div class="col-md-4">
             <div class="single-blog-card card border-0 shadow-sm">
               <span class="category position-absolute badge badge-pill badge-danger">Security</span>
-              <img src="%PUBLIC_URL%/marketing/screens/new-feature-07.png" class="card-img-top position-relative"
+              <img src="%PUBLIC_URL%/marketing/screens/new-feature-07.webp" class="card-img-top position-relative"
                 alt="blog" />
               <div class="card-body">
                 <div class="post-meta mb-2">
@@ -666,7 +666,7 @@
           <div class="col-md-4">
             <div class="single-blog-card card border-0 shadow-sm">
               <span class="category position-absolute badge badge-pill badge-info">Customisation</span>
-              <img src="%PUBLIC_URL%/marketing/screens/new-feature-08.png" class="card-img-top position-relative"
+              <img src="%PUBLIC_URL%/marketing/screens/new-feature-08.webp" class="card-img-top position-relative"
                 alt="blog" />
               <div class="card-body">
                 <div class="post-meta mb-2">
@@ -688,7 +688,7 @@
           <div class="col-md-4">
             <div class="single-blog-card card border-0 shadow-sm">
               <span class="category position-absolute badge badge-pill badge-danger">Security</span>
-              <img src="%PUBLIC_URL%/marketing/screens/new-feature-09.png" style="margin-top: 20px" class="card-img-top" alt="blog" />
+              <img src="%PUBLIC_URL%/marketing/screens/new-feature-09.webp" style="margin-top: 20px" class="card-img-top" alt="blog" />
               <div class="card-body">
                 <div class="post-meta mb-2">
                   <ul class="list-inline meta-list">
@@ -726,43 +726,43 @@
           <div class="col-md-12">
             <div class="owl-carousel owl-theme clients-carousel dot-indicator">
               <div class="item single-client">
-                <img src="%PUBLIC_URL%/marketing/screens/logos/deloitte.png" alt="deloitte" class="client-img" />
+                <img src="%PUBLIC_URL%/marketing/screens/logos/deloitte.webp" alt="deloitte" class="client-img" />
               </div>
               <div class="item single-client">
-                <img src="%PUBLIC_URL%/marketing/screens/logos/delta.png" alt="delta" class="client-img" />
+                <img src="%PUBLIC_URL%/marketing/screens/logos/delta.webp" alt="delta" class="client-img" />
               </div>
               <div class="item single-client">
-                <img src="%PUBLIC_URL%/marketing/screens/logos/expedia.png" alt="expedia" class="client-img" />
+                <img src="%PUBLIC_URL%/marketing/screens/logos/expedia.webp" alt="expedia" class="client-img" />
               </div>
               <div class="item single-client">
-                <img src="%PUBLIC_URL%/marketing/screens/logos/ibm.png" alt="ibm" class="client-img" />
+                <img src="%PUBLIC_URL%/marketing/screens/logos/ibm.webp" alt="ibm" class="client-img" />
               </div>
               <div class="item single-client">
-                <img src="%PUBLIC_URL%/marketing/screens/logos/natwest.png" alt="natwest" class="client-img" />
+                <img src="%PUBLIC_URL%/marketing/screens/logos/natwest.webp" alt="natwest" class="client-img" />
               </div>
               <div class="item single-client">
-                <img src="%PUBLIC_URL%/marketing/screens/logos/novartis.png" alt="novartis" class="client-img" />
+                <img src="%PUBLIC_URL%/marketing/screens/logos/novartis.webp" alt="novartis" class="client-img" />
               </div>
               <div class="item single-client">
-                <img src="%PUBLIC_URL%/marketing/screens/logos/pwc.png" alt="pwc" class="client-img" />
+                <img src="%PUBLIC_URL%/marketing/screens/logos/pwc.webp" alt="pwc" class="client-img" />
               </div>
               <div class="item single-client">
-                <img src="%PUBLIC_URL%/marketing/screens/logos/siemens.png" alt="siemens" class="client-img" />
+                <img src="%PUBLIC_URL%/marketing/screens/logos/siemens.webp" alt="siemens" class="client-img" />
               </div>
               <div class="item single-client">
-                <img src="%PUBLIC_URL%/marketing/screens/logos/target.png" alt="target" class="client-img" />
+                <img src="%PUBLIC_URL%/marketing/screens/logos/target.webp" alt="target" class="client-img" />
               </div>
               <div class="item single-client">
-                <img src="%PUBLIC_URL%/marketing/screens/logos/vodafone.png" alt="vodafone" class="client-img" />
+                <img src="%PUBLIC_URL%/marketing/screens/logos/vodafone.webp" alt="vodafone" class="client-img" />
               </div>
               <div class="item single-client">
-                <img src="%PUBLIC_URL%/marketing/screens/logos/adidas.png" alt="adidas" class="client-img" />
+                <img src="%PUBLIC_URL%/marketing/screens/logos/adidas.webp" alt="adidas" class="client-img" />
               </div>
               <div class="item single-client">
-                <img src="%PUBLIC_URL%/marketing/screens/logos/amazon.png" alt="amazon" class="client-img" />
+                <img src="%PUBLIC_URL%/marketing/screens/logos/amazon.webp" alt="amazon" class="client-img" />
               </div>
               <div class="item single-client">
-                <img src="%PUBLIC_URL%/marketing/screens/logos/barclays.png" alt="barclays" class="client-img" />
+                <img src="%PUBLIC_URL%/marketing/screens/logos/barclays.webp" alt="barclays" class="client-img" />
               </div>
             </div>
           </div>
@@ -777,7 +777,7 @@
 
   <footer class="footer-section marketing-content">
     <div class="footer-top pt-150 pb-5 background-img-2" style="
-          background: url('%PUBLIC_URL%/marketing/screens/bottom.png') no-repeat center top / cover;
+          background: url('%PUBLIC_URL%/marketing/screens/bottom.webp') no-repeat center top / cover;
         ">
       <div class="container">
         <div class="row justify-content-between">
