--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -151,7 +151,11 @@
           </div>
           <div class="col-md-6 col-lg-5">
             <div class="">
-              <img class="img-fluid" src="%PUBLIC_URL%/marketing/screens/mockup-1-03-s.png" alt="animation image" />
+              <picture class="img-fluid">
+                <source srcset="%PUBLIC_URL%/marketing/screens/mockup-1-03-s.webp" type="image/webp" />
+                <source srcset="%PUBLIC_URL%/marketing/screens/mockup-1-03-s.png" type="image/png" /> 
+                <img class="img-fluid" src="%PUBLIC_URL%/marketing/screens/mockup-1-03-s.png" alt="Retrospected screenshot" />
+              </picture>
             </div>
           </div>
         </div>
@@ -270,7 +274,11 @@
           </div>
           <div class="col-md-5">
             <div class="about-content-right">
-              <img src="%PUBLIC_URL%/marketing/screens/mockup-2-02-s.png" alt="about us" class="img-fluid" />
+              <picture class="img-fluid">
+                <source srcset="%PUBLIC_URL%/marketing/screens/mockup-2-02.webp" type="image/webp" />
+                <source srcset="%PUBLIC_URL%/marketing/screens/mockup-2-02-s.png" type="image/png" /> 
+                <img class="img-fluid" src="%PUBLIC_URL%/marketing/screens/mockup-2-02-s.png" alt="About us" />
+              </picture>
             </div>
           </div>
         </div>
@@ -282,7 +290,11 @@
         <div class="row align-items-center justify-content-between">
           <div class="col-md-4">
             <div class="download-img">
-              <img src="%PUBLIC_URL%/marketing/screens/screen-3-01-s.png" alt="download" class="img-fluid" />
+              <picture class="img-fluid">
+                <source srcset="%PUBLIC_URL%/marketing/screens/screen-3-01.webp" type="image/webp" />
+                <source srcset="%PUBLIC_URL%/marketing/screens/screen-3-01-s.png" type="image/png" /> 
+                <img class="img-fluid" src="%PUBLIC_URL%/marketing/screens/screen-3-01-s.png" alt="iPad mockup" />
+              </picture>
             </div>
           </div>
           <div class="col-md-7">
