--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -659,8 +659,11 @@
           <div class="col-md-4">
             <div class="single-blog-card card border-0 shadow-sm">
               <span class="category position-absolute badge badge-pill badge-danger">Security</span>
-              <img src="%PUBLIC_URL%/marketing/screens/new-feature-07.png" class="card-img-top position-relative"
-                alt="blog" />
+              <picture class="card-img-top position-relative">
+                <source srcset="%PUBLIC_URL%/marketing/screens/new-feature-07.webp" type="image/webp" />
+                <source srcset="%PUBLIC_URL%/marketing/screens/new-feature-07.png" type="image/png" /> 
+                <img class="card-img-top position-relative" src="%PUBLIC_URL%/marketing/screens/new-feature-07.png" alt="blog" />
+              </picture>
               <div class="card-body">
                 <div class="post-meta mb-2">
                   <ul class="list-inline meta-list">
@@ -678,8 +681,11 @@
           <div class="col-md-4">
             <div class="single-blog-card card border-0 shadow-sm">
               <span class="category position-absolute badge badge-pill badge-info">Customisation</span>
-              <img src="%PUBLIC_URL%/marketing/screens/new-feature-08.png" class="card-img-top position-relative"
-                alt="blog" />
+              <picture class="card-img-top position-relative">
+                <source srcset="%PUBLIC_URL%/marketing/screens/new-feature-08.webp" type="image/webp" />
+                <source srcset="%PUBLIC_URL%/marketing/screens/new-feature-08.png" type="image/png" /> 
+                <img class="card-img-top position-relative" src="%PUBLIC_URL%/marketing/screens/new-feature-08.png" alt="blog" />
+              </picture>
               <div class="card-body">
                 <div class="post-meta mb-2">
                   <ul class="list-inline meta-list">
@@ -700,7 +706,11 @@
           <div class="col-md-4">
             <div class="single-blog-card card border-0 shadow-sm">
               <span class="category position-absolute badge badge-pill badge-danger">Security</span>
-              <img src="%PUBLIC_URL%/marketing/screens/new-feature-09.png" style="margin-top: 20px" class="card-img-top" alt="blog" />
+              <picture class="card-img-top position-relative">
+                <source srcset="%PUBLIC_URL%/marketing/screens/new-feature-09.webp" type="image/webp" />
+                <source srcset="%PUBLIC_URL%/marketing/screens/new-feature-09.png" type="image/png" /> 
+                <img class="card-img-top position-relative" src="%PUBLIC_URL%/marketing/screens/new-feature-09.png" alt="blog" />
+              </picture>
               <div class="card-body">
                 <div class="post-meta mb-2">
                   <ul class="list-inline meta-list">
