--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -806,8 +806,9 @@
           <div class="col-lg-3 mb-3 mb-lg-0">
             <div class="footer-nav-wrap text-black">
               <p>
-                This is a free and open-source software. For support, file a GitHub ticket
-                <a href="https://github.com/antoinejaussoin/retro-board" target="_blank" title="GitHub">here.</a>
+                This software is open-source. For non-subscribed customers, file a GitHub ticket for support <a href="https://github.com/antoinejaussoin/retro-board" target="_blank" title="GitHub">here.</a>
+                <br />
+                For customers with a subscription, email <a href="mailto:support@retrospected.com">support@retrospected.com</a>.
               </p>
 
               <div class="social-list-wrap">
