--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -137,19 +137,20 @@
     <section class="hero-section hero-section-2 ptb-100">
       <div class="container">
         <div class="row align-items-center justify-content-between">
-          <div class="col-md-6 col-lg-6">
+          <div class="col-md-7 col-lg-7">
             <div class="hero-content-left ptb-100 text-white">
               <h1 class="text-white">
-                Real-time <span>Retrospectives</span> done right. <br />For
-                free. <br />
-                Start in seconds.
+                Real-time <span>Retrospectives</span>.<br />
+                Done right. <br />
+                For free. <br />
+                In seconds.
               </h1>
               <p class="lead">
                 Because Post-It notes aren't going to cut it.<br />
               </p>
             </div>
           </div>
-          <div class="col-md-6 col-lg-5">
+          <div class="col-md-5 col-lg-5">
             <div class="">
               <picture class="img-fluid">
                 <source srcset="%PUBLIC_URL%/marketing/screens/mockup-1-03-s.webp" type="image/webp" />
@@ -168,9 +169,7 @@
           <div class="col-lg-7 col-md-8">
             <div class="section-heading text-center mb-5">
               <h2>
-                Why Retrospected?
-                <br />
-                <span>Why not use a whiteboard?</span>
+                Why not use a whiteboard?
               </h2>
               <p class="lead">Because it's fun 🎉, but also it's:</p>
             </div>
