Add login page and click

--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -504,6 +504,7 @@
               </div>
           </div>
           <div class="row justify-content-center">
+            <a href="/login" style="color: unset">
               <div class="col-lg-3 col-md">
                   <div class="card text-center single-pricing-pack">
                       <div class="pt-4"><h5>Basic</h5></div>
@@ -522,10 +523,12 @@
                               <li>Post grouping</li>
                               <li>Anonymouns Accounts</li>
                           </ul>
-                          <div style="height: 61px;">&nbsp;</div>
+                          <a href="/login" class="btn solid-btn mb-3">Login</a>
                       </div>
                   </div>
               </div>
+            </a>
+            <a href="/subscribe" style="color: unset">
               <div class="col-lg-3 col-md">
                   <div class="card popular-price text-center single-pricing-pack">
                       <div class="pt-4"><h5>Pro Team</h5></div>
@@ -548,6 +551,8 @@
                       </div>
                   </div>
               </div>
+            </a>
+            <a href="/subscribe"  style="color: unset">
               <div class="col-lg-3 col-md">
                   <div class="card text-center single-pricing-pack">
                       <div class="pt-4"><h5>Pro Unlimited</h5></div>
@@ -569,28 +574,30 @@
                       </div>
                   </div>
               </div>
-              <div class="col-lg-3 col-md">
-                <div class="card text-center single-pricing-pack">
-                    <div class="pt-4"><h5>Self-hosted</h5></div>
-                    <div class="pricing-img mt-4">
-                      <img src="%PUBLIC_URL%/marketing/img/pricing-self-hosted.svg" alt="pricing img" class="img-fluid">
-                    </div>
-                    <div class="card-header py-4 border-0 pricing-header">
-                        <div class="h1 text-center mb-0"><span class="price font-weight-bolder">Call us!</span></div>
-                        <div class="h4 text-center mb-0"><span class="price-month">&nbsp;</span></div>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-unstyled text-sm mb-4 pricing-feature-list">
-                          <li><em>Everything from Unlimited, plus:</em></li>
-                            <li>Support for self-hosting</li>
-                            <li>All users are Pro users</li>
-                            <li>Lifetime license</li>
-                            <li>&nbsp;</li>
-                        </ul>
-                        <a href="mailto:support@retrospected.com" class="btn outline-btn mb-3">Contact us</a>
-                    </div>
-                </div>
+            </a>  
+            <div class="col-lg-3 col-md">
+              <div class="card text-center single-pricing-pack">
+                  <div class="pt-4"><h5>Self-hosted</h5></div>
+                  <div class="pricing-img mt-4">
+                    <img src="%PUBLIC_URL%/marketing/img/pricing-self-hosted.svg" alt="pricing img" class="img-fluid">
+                  </div>
+                  <div class="card-header py-4 border-0 pricing-header">
+                      <div class="h1 text-center mb-0"><span class="price font-weight-bolder">Call us!</span></div>
+                      <div class="h4 text-center mb-0"><span class="price-month">&nbsp;</span></div>
+                  </div>
+                  <div class="card-body">
+                      <ul class="list-unstyled text-sm mb-4 pricing-feature-list">
+                        <li><em>Everything from Unlimited, plus:</em></li>
+                          <li>Support for self-hosting</li>
+                          <li>All users are Pro users</li>
+                          <li>Lifetime license</li>
+                          <li>&nbsp;</li>
+                      </ul>
+                      <a href="mailto:support@retrospected.com" class="btn outline-btn mb-3">Contact us</a>
+                  </div>
+              </div>
             </div>
+          
           </div>
           <div class="mt-5 text-center">
               <p class="mb-2">Any other question? <a href="mailto:support@retrospected.com" class="color-secondary">
