--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -299,7 +299,7 @@
           <div class="col-md-7">
             <div class="feature-contents section-heading">
               <h2>
-                Easy but powerfull with the <br />
+                Easy but powerful with the <br />
                 <span>best features</span>
               </h2>
               <p>
