--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -490,10 +490,10 @@
           <div class="row justify-content-center">
               <div class="col-md-8">
                   <div class="section-heading text-center mb-5">
-                      <span class="badge badge-primary badge-pill">For complete data safety and privacy</span>
+                      <span class="badge badge-primary badge-pill">Encryption & Private Sessions</span>
                       <br>
                       <br>
-                      <h2>Retrospected Pro<br><span>Encryption and Private Sessions for your precious data</span></h2>
+                      <h2>Retrospected Pro<br><span>For complete data safety and privacy</span></h2>
                       <p class="lead">
                         Enable full client-side encryption to guarantee that your retrospectives data cannot be seen outside of your company.
                       </p>
