--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -512,8 +512,10 @@
                         <img src="%PUBLIC_URL%/marketing/img/pricing-free.svg" alt="pricing img" class="img-fluid">
                       </div>
                       <div class="card-header py-4 border-0 pricing-header">
-                          <div class="h1 text-center mb-0"><span class="price font-weight-bolder">Free</span></div>
-                          <div class="h4 text-center mb-0"><span class="price-month">&nbsp;</span></div>
+                        <div class="h4 text-center mb-0"><span class="price font-weight-bolder">&nbsp;</span></div>
+                        <div class="h6 text-center mb-0 color-primary launch-offer">&nbsp;</div>
+                        <div class="h1 text-center mb-0"><span class="price font-weight-bolder">Free</span></div>
+                        <div class="h4 text-center mb-0"><span class="price-month">&nbsp;</span></div>
                       </div>
                       <div class="card-body">
                           <ul class="list-unstyled text-sm mb-4 pricing-feature-list">
@@ -536,7 +538,9 @@
                           <img src="%PUBLIC_URL%/marketing/img/pricing-team.svg" alt="pricing img" class="img-fluid">
                       </div>
                       <div class="card-header py-4 border-0 pricing-header">
-                          <div class="h1 text-center mb-0">£<span class="price font-weight-bolder">8.90</span></div>
+                          <div class="h4 text-center mb-0 crossed-out">$<span class="price font-weight-bolder">19.90</span></div>
+                          <div class="h6 text-center mb-0 color-primary launch-offer">Limited launch offer, 50% off!</div>
+                          <div class="h1 text-center mb-0">$<span class="price font-weight-bolder">9.95</span></div>
                           <div class="h4 text-center mb-0"><span class="price-month">/month</span></div>
                       </div>
                       <div class="card-body">
@@ -560,8 +564,10 @@
                         <img src="%PUBLIC_URL%/marketing/img/pricing-unlimited.svg" alt="pricing img" class="img-fluid">
                       </div>
                       <div class="card-header py-4 border-0 pricing-header">
-                          <div class="h1 text-center mb-0">£<span class="price font-weight-bolder">39.90</span></div>
-                          <div class="h4 text-center mb-0"><span class="price-month">/month</span></div>
+                        <div class="h4 text-center mb-0 crossed-out">$<span class="price font-weight-bolder">99.90</span></div>
+                        <div class="h6 text-center mb-0 color-primary launch-offer">Limited launch offer, 50% off!</div>
+                        <div class="h1 text-center mb-0">$<span class="price font-weight-bolder">49.95</span></div>
+                        <div class="h4 text-center mb-0"><span class="price-month">/month</span></div>
                       </div>
                       <div class="card-body">
                           <ul class="list-unstyled text-sm mb-4 pricing-feature-list">
@@ -582,6 +588,8 @@
                     <img src="%PUBLIC_URL%/marketing/img/pricing-self-hosted.svg" alt="pricing img" class="img-fluid">
                   </div>
                   <div class="card-header py-4 border-0 pricing-header">
+                      <div class="h4 text-center mb-0"><span class="price font-weight-bolder">&nbsp;</span></div>
+                      <div class="h6 text-center mb-0 color-primary launch-offer">&nbsp;</div>
                       <div class="h1 text-center mb-0"><span class="price font-weight-bolder">Call us!</span></div>
                       <div class="h4 text-center mb-0"><span class="price-month">&nbsp;</span></div>
                   </div>
