--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -589,10 +589,10 @@
                     <img src="%PUBLIC_URL%/marketing/img/pricing-self-hosted.svg" alt="pricing img" class="img-fluid">
                   </div>
                   <div class="card-header py-4 border-0 pricing-header">
-                      <div class="h4 text-center mb-0"><span class="price font-weight-bolder">&nbsp;</span></div>
-                      <div class="h6 text-center mb-0 color-primary launch-offer">&nbsp;</div>
-                      <div class="h1 text-center mb-0"><span class="price font-weight-bolder">Call us!</span></div>
-                      <div class="h4 text-center mb-0"><span class="price-month">&nbsp;</span></div>
+                      <div class="h4 text-center mb-0 crossed-out">$<span class="price font-weight-bolder">1,199</span></div>
+                      <div class="h6 text-center mb-0 color-primary launch-offer">Limited launch offer, 50% off!</div>
+                      <div class="h1 text-center mb-0"><span class="price font-weight-bolder">$599</span></div>
+                      <div class="h4 text-center mb-0"><span class="price-month">One-time fee</span></div>
                   </div>
                   <div class="card-body">
                       <ul class="list-unstyled text-sm mb-4 pricing-feature-list">
@@ -600,9 +600,9 @@
                           <li>Support for self-hosting</li>
                           <li>All users are Pro users</li>
                           <li>Lifetime license</li>
-                          <li>&nbsp;</li>
+                          <li>Free updates</li>
                       </ul>
-                      <a href="mailto:support@retrospected.com" class="btn outline-btn mb-3">Contact us</a>
+                      <a href="/subscribe" class="btn solid-btn mb-3">Buy Now</a>
                   </div>
               </div>
             </div>
