Link to product

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -531,7 +531,7 @@
                   </div>
               </div>
             </a>
-            <a href="/subscribe" style="color: unset">
+            <a href="/subscribe?product=team" style="color: unset">
               <div class="col-lg-3 col-md">
                   <div class="card  text-center single-pricing-pack">
                       <div class="pt-4"><h5>Pro Team</h5></div>
@@ -552,12 +552,12 @@
                               <li>Private Sessions</li>
                               <li>20 Users</li>
                           </ul>
-                          <a href="/subscribe" class="btn outline-btn mb-3">Subscribe Now</a>
+                          <a href="/subscribe?product=team" class="btn outline-btn mb-3">Subscribe Now</a>
                       </div>
                   </div>
               </div>
             </a>
-            <a href="/subscribe"  style="color: unset">
+            <a href="/subscribe?product=unlimited"  style="color: unset">
               <div class="col-lg-3 col-md">
                   <div class="card popular-price text-center single-pricing-pack">
                       <div class="pt-4"><h5>Pro Unlimited</h5></div>
@@ -577,36 +577,37 @@
                               <li>All users from your domain are Pro automatically</li>
                               <li>&nbsp;</li>
                           </ul>
-                          <a href="/subscribe" class="btn solid-btn mb-3">Subscribe Now</a>
+                          <a href="/subscribe?product=unlimited" class="btn solid-btn mb-3">Subscribe Now</a>
                       </div>
                   </div>
               </div>
             </a>  
-            <div class="col-lg-3 col-md">
-              <div class="card text-center single-pricing-pack">
-                  <div class="pt-4"><h5>Self-hosted</h5></div>
-                  <div class="pricing-img mt-4">
-                    <img src="%PUBLIC_URL%/marketing/img/pricing-self-hosted.svg" alt="pricing img" class="img-fluid">
-                  </div>
-                  <div class="card-header py-4 border-0 pricing-header">
-                      <div class="h4 text-center mb-0 crossed-out">$<span class="price font-weight-bolder">1,199</span></div>
-                      <div class="h6 text-center mb-0 color-primary launch-offer">Limited launch offer, 50% off!</div>
-                      <div class="h1 text-center mb-0"><span class="price font-weight-bolder">$599</span></div>
-                      <div class="h4 text-center mb-0"><span class="price-month">One-time fee</span></div>
-                  </div>
-                  <div class="card-body">
-                      <ul class="list-unstyled text-sm mb-4 pricing-feature-list">
-                        <li><em>Everything from Unlimited, plus:</em></li>
-                          <li>Support for self-hosting</li>
-                          <li>All users are Pro users</li>
-                          <li>Lifetime license</li>
-                          <li>Free updates</li>
-                      </ul>
-                      <a href="/subscribe" class="btn solid-btn mb-3">Buy Now</a>
-                  </div>
+            <a href="/subscribe?product=self-hosted"  style="color: unset">
+              <div class="col-lg-3 col-md">
+                <div class="card text-center single-pricing-pack">
+                    <div class="pt-4"><h5>Self-hosted</h5></div>
+                    <div class="pricing-img mt-4">
+                      <img src="%PUBLIC_URL%/marketing/img/pricing-self-hosted.svg" alt="pricing img" class="img-fluid">
+                    </div>
+                    <div class="card-header py-4 border-0 pricing-header">
+                        <div class="h4 text-center mb-0 crossed-out">$<span class="price font-weight-bolder">1,199</span></div>
+                        <div class="h6 text-center mb-0 color-primary launch-offer">Limited launch offer, 50% off!</div>
+                        <div class="h1 text-center mb-0"><span class="price font-weight-bolder">$599</span></div>
+                        <div class="h4 text-center mb-0"><span class="price-month">One-time fee</span></div>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-unstyled text-sm mb-4 pricing-feature-list">
+                          <li><em>Everything from Unlimited, plus:</em></li>
+                            <li>Support for self-hosting</li>
+                            <li>All users are Pro users</li>
+                            <li>Lifetime license</li>
+                            <li>Free updates</li>
+                        </ul>
+                        <a href="/subscribe?product=self-hosted" class="btn solid-btn mb-3">Buy Now</a>
+                    </div>
+                </div>
               </div>
-            </div>
-          
+            </a>
           </div>
           <div class="mt-5 text-center">
               <p class="mb-2">Any other question? <a href="mailto:support@retrospected.com" class="color-secondary">
