--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -595,7 +595,7 @@
                             <li>Lifetime license</li>
                             <li>Free updates</li>
                         </ul>
-                        <a href="/subscribe?product=self-hosted" class="btn solid-btn mb-3">Buy Now</a>
+                        <a href="/subscribe?product=self-hosted" class="btn outline-btn mb-3">Buy Now</a>
                     </div>
                 </div>
               </div>
